# advent-of-code-2025

./: .gitignore  .gitmodules  CMakeLists.txt  make_day.py  out.txt  prof.txt  readme.md
day1 - complete/: CMakeLists.txt
day1 - complete/src/: part1.cpp  part2.cpp
day1-complete/: CMakeLists.txt
day1-complete/src/: part1.cpp  part2.cpp
day10/: CMakeLists.txt
day10-complete/: CMakeLists.txt
day10-complete/src/: part1.cpp  part2.cpp  part2.py
day10/src/: part1.cpp  part2.py
day11-complete/: CMakeLists.txt
day11-complete/src/: part1.cpp  part2.cpp
day12-complete/: CMakeLists.txt
day12-complete/src/: part1.cpp
day2 - complete/: CMakeLists.txt
day2 - complete/src/: part1.cpp  part2.cpp
day2-complete/: CMakeLists.txt
day2-complete/src/: part1.cpp  part2.cpp
day3 - complete/: CMakeLists.txt
day3 - complete/src/: part1.cpp  part2.cpp
day3-complete/src/: part1.cpp  part2.cpp
day4/: CMakeLists.txt
day4 - complete/: CMakeLists.txt
day4 - complete/src/: part1.cpp  part2.cpp
day4-complete/src/: part1.cpp  part2.cpp
day4/src/: part1.cpp  part2.cpp
day5 - complete/src/: part1.cpp  part2.cpp
day5-complete/: CMakeLists.txt
day5-complete/src/: part1.cpp  part2.cpp
day6-complete/: CMakeLists.txt
day6-complete/src/: part1.cpp  part2.cpp
day7-complete/: CMakeLists.txt
day7-complete/src/: part1.cpp  part2.cpp
day8-complete/: CMakeLists.txt
day8-complete/src/: part1.cpp  part2.cpp
day9-complete/: CMakeLists.txt
day9-complete/src/: part1.cpp  part2.cpp
